bindings/vala/src/lib_proven.vapi


    [CCode (cname = "proven_datetime_parse")]
    public static DateTimeResult datetime_parse ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_datetime_format_iso8601")]
    public static StringResult datetime_format_iso8601 (DateTime dt);

    [CCode (cname = "proven_datetime_is_leap_year")]
    public static bool datetime_is_leap_year (int32 year);

    [CCode (cname = "proven_datetime_days_in_month")]
    public static uint8 datetime_days_in_month (int32 year, uint8 month);

    /* ================================================================
     * SafeFloat
     * ================================================================ */

    [CCode (cname = "proven_float_div")]
    public static FloatResult float_div (double a, double b);

    [CCode (cname = "proven_float_is_finite")]
    public static bool float_is_finite (double x);

    [CCode (cname = "proven_float_is_nan")]
    public static bool float_is_nan (double x);

    [CCode (cname = "proven_float_sqrt")]
    public static FloatResult float_sqrt (double x);

    [CCode (cname = "proven_float_ln")]
    public static FloatResult float_ln (double x);

    /* ================================================================
     * SafeHex
     * ================================================================ */

    [CCode (cname = "ProvenHexDecodeResult", has_type_id = false, destroy_function = "")]
    public struct HexDecodeResult {
        public int32   status;
        public uint8*  data;
        public size_t  length;
    }

    [CCode (cname = "proven_hex_encode")]
    public static StringResult hex_encode ([CCode (array_length_type = "size_t")] uint8[] data, bool uppercase);

    [CCode (cname = "proven_hex_decode")]
    public static HexDecodeResult hex_decode ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_hex_free")]
    public static void hex_free (HexDecodeResult* result);

    /* ================================================================
     * SafeHeader
     * ================================================================ */

    [CCode (cname = "proven_header_has_crlf")]
    public static BoolResult header_has_crlf ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_header_is_valid_name")]
    public static BoolResult header_is_valid_name ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_header_is_dangerous")]
    public static BoolResult header_is_dangerous ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_header_render")]
    public static StringResult header_render (
        [CCode (array_length_type = "size_t")] uint8[] name_data,
        [CCode (array_length_type = "size_t")] uint8[] value_data
    );

    [CCode (cname = "proven_header_build_csp")]
    public static StringResult header_build_csp ([CCode (array_length_type = "size_t")] uint8[] json_data);

    [CCode (cname = "proven_header_build_hsts")]
    public static StringResult header_build_hsts (int64 max_age, bool include_subdomains, bool preload);

    /* ================================================================
     * SafePassword
     * ================================================================ */

    [CCode (cname = "ProvenPasswordStrength", cprefix = "PROVEN_PASSWORD_", has_type_id = false)]
    public enum PasswordStrength {
        [CCode (cname = "PROVEN_PASSWORD_VERY_WEAK")]
        VERY_WEAK = 0,
        [CCode (cname = "PROVEN_PASSWORD_WEAK")]
        WEAK = 1,
        [CCode (cname = "PROVEN_PASSWORD_FAIR")]
        FAIR = 2,
        [CCode (cname = "PROVEN_PASSWORD_STRONG")]
        STRONG = 3,
        [CCode (cname = "PROVEN_PASSWORD_VERY_STRONG")]
        VERY_STRONG = 4
    }

    [CCode (cname = "ProvenPasswordResult", has_type_id = false)]
    public struct PasswordResult {
        public PasswordStrength strength;
        public bool   has_lowercase;
        public bool   has_uppercase;
        public bool   has_digit;
        public bool   has_special;
        public size_t length;
    }

    [CCode (cname = "proven_password_validate")]
    public static PasswordResult password_validate ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_password_is_common")]
    public static bool password_is_common ([CCode (array_length_type = "size_t")] uint8[] data);

    /* ================================================================
     * SafeColor
     * ================================================================ */

    [CCode (cname = "ProvenRGBColor", has_type_id = false)]
    public struct RGBColor {
        public uint8 r;
        public uint8 g;
        public uint8 b;
    }

    [CCode (cname = "ProvenHSLColor", has_type_id = false)]
    public struct HSLColor {
        public double h;
        public double s;
        public double l;
    }

    [CCode (cname = "ProvenColorResult", has_type_id = false)]
    public struct ColorResult {
        public int32    status;
        public RGBColor color;
    }

    [CCode (cname = "proven_color_parse_hex")]
    public static ColorResult color_parse_hex ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_color_rgb_to_hsl")]
    public static HSLColor color_rgb_to_hsl (RGBColor rgb);

    [CCode (cname = "proven_color_to_hex")]
    public static StringResult color_to_hex (RGBColor rgb);

    /* ================================================================
     * SafeAngle
     * ================================================================ */

    [CCode (cname = "proven_angle_deg_to_rad")]
    public static double angle_deg_to_rad (double degrees);

    [CCode (cname = "proven_angle_rad_to_deg")]
    public static double angle_rad_to_deg (double radians);

    [CCode (cname = "proven_angle_normalize_degrees")]
    public static double angle_normalize_degrees (double degrees);

    [CCode (cname = "proven_angle_normalize_radians")]
    public static double angle_normalize_radians (double radians);

    /* ================================================================
     * SafeUnit
     * ================================================================ */

    [CCode (cname = "ProvenLengthUnit", cprefix = "PROVEN_LENGTH_", has_type_id = false)]
    public enum LengthUnit {
        [CCode (cname = "PROVEN_LENGTH_METERS")]
        METERS = 0,
        [CCode (cname = "PROVEN_LENGTH_KILOMETERS")]
        KILOMETERS = 1,
        [CCode (cname = "PROVEN_LENGTH_CENTIMETERS")]
        CENTIMETERS = 2,
        [CCode (cname = "PROVEN_LENGTH_MILLIMETERS")]
        MILLIMETERS = 3,
        [CCode (cname = "PROVEN_LENGTH_FEET")]
        FEET = 4,
        [CCode (cname = "PROVEN_LENGTH_INCHES")]
        INCHES = 5,
        [CCode (cname = "PROVEN_LENGTH_MILES")]
        MILES = 6,
        [CCode (cname = "PROVEN_LENGTH_YARDS")]
        YARDS = 7
    }

    [CCode (cname = "ProvenTempUnit", cprefix = "PROVEN_TEMP_", has_type_id = false)]
    public enum TempUnit {
        [CCode (cname = "PROVEN_TEMP_CELSIUS")]
        CELSIUS = 0,
        [CCode (cname = "PROVEN_TEMP_FAHRENHEIT")]
        FAHRENHEIT = 1,
        [CCode (cname = "PROVEN_TEMP_KELVIN")]
        KELVIN = 2
    }

    [CCode (cname = "proven_unit_convert_length")]
    public static FloatResult unit_convert_length (double value, LengthUnit from, LengthUnit to);

    [CCode (cname = "proven_unit_convert_temp")]
    public static FloatResult unit_convert_temp (double value, TempUnit from, TempUnit to);

    /* ================================================================
     * SafeChecksum
     * ================================================================ */

    [CCode (cname = "proven_checksum_crc32")]
    public static IntResult checksum_crc32 ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_checksum_verify_crc32")]
    public static BoolResult checksum_verify_crc32 ([CCode (array_length_type = "size_t")] uint8[] data, uint32 expected);

    /* ================================================================
     * SafeVersion
     * ================================================================ */

    [CCode (cname = "ProvenSemanticVersion", has_type_id = false, destroy_function = "")]
    public struct SemanticVersion {
        public uint32 major;
        public uint32 minor;
        public uint32 patch;
        public size_t prerelease_len;
        public char*  prerelease;
    }

    [CCode (cname = "ProvenVersionResult", has_type_id = false, destroy_function = "")]
    public struct VersionResult {
        public int32           status;
        public SemanticVersion version;
    }

    [CCode (cname = "proven_version_parse")]
    public static VersionResult version_parse ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_version_compare")]
    public static int32 version_compare (SemanticVersion a, SemanticVersion b);

    [CCode (cname = "proven_version_free")]
    public static void version_free (SemanticVersion* version);

    /* ================================================================
     * SafeGeo
     * ================================================================ */

    [CCode (cname = "ProvenGeoCoordinate", has_type_id = false)]
    public struct GeoCoordinate {
        public double latitude;
        public double longitude;
    }

    [CCode (cname = "ProvenGeoResult", has_type_id = false)]
    public struct GeoResult {
        public int32         status;
        public GeoCoordinate coordinate;
    }

    [CCode (cname = "proven_geo_validate")]
    public static GeoResult geo_validate (double lat, double lon);

    [CCode (cname = "proven_geo_distance")]
    public static FloatResult geo_distance (GeoCoordinate a, GeoCoordinate b);

    [CCode (cname = "proven_geo_in_bounds")]
    public static bool geo_in_bounds (
        GeoCoordinate coord,
        double min_lat, double max_lat,
        double min_lon, double max_lon
    );

    /* ================================================================
     * SafeProbability
     * ================================================================ */

    [CCode (cname = "proven_probability_create")]
    public static double probability_create (double value);

    [CCode (cname = "proven_probability_and")]
    public static double probability_and (double a, double b);

    [CCode (cname = "proven_probability_or_exclusive")]
    public static double probability_or_exclusive (double a, double b);

    [CCode (cname = "proven_probability_not")]
    public static double probability_not (double p);

    /* ================================================================
     * SafeCalculator
     * ================================================================ */

    [CCode (cname = "proven_calculator_eval")]
    public static FloatResult calculator_eval ([CCode (array_length_type = "size_t")] uint8[] data);

    /* ================================================================
     * SafeUUID
     * ================================================================ */

    [CCode (cname = "ProvenUUID", has_type_id = false)]
    public struct UUID {
        [CCode (array_length = false)]
        public uint8 bytes[16];
    }

    [CCode (cname = "ProvenUUIDResult", has_type_id = false)]
    public struct UUIDResult {
        public int32 status;
        public UUID  uuid;
    }

    [CCode (cname = "proven_uuid_v4")]
    public static UUIDResult uuid_v4 ();

    [CCode (cname = "proven_uuid_to_string")]
    public static StringResult uuid_to_string (UUID uuid);

    [CCode (cname = "proven_uuid_parse")]
    public static UUIDResult uuid_parse ([CCode (array_length_type = "size_t")] uint8[] data);

    [CCode (cname = "proven_uuid_is_nil")]
    public static bool uuid_is_nil (UUID uuid);

    [CCode (cname = "proven_uuid_version")]
    public static uint8 uuid_version (UUID uuid);
